--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "devDependencies": {
+  "vite": "^5.0.0",
+  "@vitejs/plugin-react": "^4.2.1"
+}
+,
   "devDependencies": {
     "vite": "^5.0.0"
   }
